syntax = "proto3";

import "google/protobuf/timestamp.proto";

package chat;

service Room {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc Listen(ListenRequest) returns (stream ReceiverMessage);
  rpc Send(stream SenderMessage) returns (stream SenderMessageStatus);
}

enum ResponseStatus {
    OK     = 0;
    REJECT = 1;
    ERROR  = 3;
}

message RegisterUserRequest {
  string user_name = 1;
}

message RegisterUserResponse {
  ResponseStatus status     = 1;
  string         session_id = 2;
}

message ListUsersRequest {
  string query = 1;
}

message ListUsersResponse {
  uint32 size = 1;
  repeated string user_names = 2;
}

message ListenRequest {}

message ReceiverMessage {
  string uuid                         = 2;
  string user_name                    = 3;
  string text                         = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message SenderMessage {
  string uuid                = 1;
  string session_id          = 2;
  string text                = 3;
}

message SenderMessageStatus {
  string uuid           = 1;
  ResponseStatus status = 2;
}
